--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "photoappfrontendangular",
+  "name": "photo-app-frontend-angular",
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
